--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --open",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "typescript": "^5.4.3",
+    "vite": "^5.2.3"
   },
   "dependencies": {
     "@types/dom-webcodecs": "^0.1.11",
+    "@types/node": "^20.11.30",
     "@types/three": "^0.162.0",
     "@webgpu/types": "^0.1.40",
     "gl-matrix": "^3.4.3",
